# server/internal/contract/openapi/modules/generate.go
@@ -1,0 +1,3 @@
+package modulesopenapi
+
+//go:generate go tool oapi-codegen --include-operation-ids getModulesRuntime,getModulesRuntimeModule --generate types --package modulesopenapi -o zz_generated.modules.go ../../../../../openapi/openapi.yaml
